Make calendar day view events fill up the correctly sized slots
Summary: Ref T4393, Make calendar day view events fill up the correctly sized slots. (not handling overlapping slots)

Test Plan: Create an event 4:30-5:30am. Day view should correctly reflect when event happens.

Reviewers: epriestley, #blessed_reviewers, chad

Reviewed By: epriestley, #blessed_reviewers

Subscribers: Korvin, epriestley

Maniphest Tasks: T4393

Differential Revision: https://secure.phabricator.com/D12700

--- a/webroot/rsrc/css/phui/calendar/phui-calendar-day.css
+++ b/webroot/rsrc/css/phui/calendar/phui-calendar-day.css
@@ -32,13 +32,14 @@
   position: absolute;
   top: 0;
   bottom: 0;
+  min-height: 30px;
 }
 
 .phui-calendar-day-event-link {
   padding: 8px;
   border: 1px solid {$blueborder};
   background-color: {$bluebackground};
-  margin: 4px;
+  margin: 0 4px;
   position: absolute;
   left: 0;
   right: 0;
